@@ -10,6 +10,7 @@
 * Fix merging of tables containing model extensions when different scans have different subsets of antennas
 * New utility: tabulatedelays.  Will make a list of evaluated delay polynomials every 24 seconds (on the usual grid of model points).  Delays and rates are printed.
 * New function: evaluateDifxAntennaClock
+* Write Parallactic Angle and/or Refraction Corrected Elevation to .im file if they are populated
 
 3.4.0
 * Fix X/Y polarization issue
